@@ -1,6 +1,8 @@
 Revision history for Cache
 
 1.00 in progress
+ - localized scope of global file and directory handles (FILE and DIR)
+ - applied Jonathan Swartz's patch for a much better untainting regex
  - changed _Untaint_String to throw an exception on a taint
 
 0.99 2001-12-09-18-45
